Settings page no longer looks squashed on mobile when in landscape orientation.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -805,6 +805,12 @@ nav .user-profile-pic{
     min-width: fit-content;
 }
 
+@media all and (orientation: landscape){
+    .settings-options-sec{
+        height: initial;
+    }
+}
+
 #change-profile-pic-form{
     display: flex;
     flex-direction: column;
